# tweet-generator

./: .gitignore  README.md  get_trump_tweets.py  noxfile.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  tweet_generator.py  tweet_gui.py
.github/workflows/: lint.yml
data/: realDonaldTrump_tweets.csv  realDonaldTrump_tweets.pkl
