[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=42", "wheel"]

[tool.black]
line-length = 79

[tool.isort]
known_local_folder = [
  "data",
  "img"
]
known_third_party = [
  "tweepy",
  "nltk"
]
profile = "black"
line_length = 79 # Need to override the default 88 for the "black" profile